# tuberTrader

./: .gitignore  JOURNAL.md  LICENSE.txt  README.md  all_logs.txt  docker-compose.yaml  package-lock.json  tuber_dump.sql
backend/: .dockerignore  .env.example  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.migration.json  vite.config.ts
backend/src/: app.ts  index.ts  opts.ts  routes.ts  server.ts  types.ts  utils.ts
backend/src/lib/: logger.ts
backend/src/plugins/: auth.ts  badwords.ts  database.ts  (+2 more)
backend/temp/: IPHistory.ts.json  Message.ts.json  Profile.ts.json  SellingPriceHistory.ts.json  Transactions.ts.json  TuberBaseEntity.ts.json  TuberCompositeEntity.ts.json  User.ts.json
backend/test/: app.test.ts
backendOLD/: README.md  package.json  pnpm-lock.yaml  tsconfig.docs.json  typedoc.json
backendOLD/public/: index.html
backendOLD/src/: opts.ts  routes.ts  server.ts  types.ts
frontend/: .dockerignore  .env  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  Dockerfile  cypress.config.ts  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  typedoc.json
frontend/src/: App.tsx  initialState.ts  main.tsx
root_review/: .env  Cargo.toml  Dockerfile  README.md
root_review/src/: handlers.rs  lib.rs  main.rs  models.rs  packages.rs  routes.rs
searchPyService/: Dockerfile  readme.txt  requirements.txt
searchPyService/searchServiceDEP/: manage.py
search_py_service/: Dockerfile  readme.txt
search_py_service/tuber_trader/: .env  Dockerfile  env.example  manage.py  requirements.txt
(+103 files in other folders)
