[package]
name = "root_review"
version = "0.1.0"
edition = "2021"
authors = ["Kira Klingenberg <kirak@pdx.edu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6.2"
axum-macros = "0.3.1"
dotenvy = "0.15.6"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
futures = "0.3.1"
#postgres = "0.19.5"
r2d2 = "0.8.8"
reqwest = "0.11.13"
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "0.6",  features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
tower-http = { version = "0.4.0", features = ["cors"]}
tracing = "0.1"
tracing-subscriber = "0.3"


[features]
default = ["offline"]
offline = ["sqlx/offline"]
